Switched from wasabi to ktor and simplified build and Dockerfile